adds cookie options to authconfig

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 #==========
 AUTH_SECRET=
 
-# Azure Dev Test
-# ==============
+# Azure Auth
+# ==========
 AUTH_AZURE_ENTERPRISE_APPLICATION_ID=
 AUTH_AZURE_APP_REGISTRATION_CLIENT_SECRET_VALUE=
 AUTH_AZURE_APP_REGISTRATION_DIRECTORY_TENANT_ID=
